content/boomerang-flow/3.1.0/architecture/02.application.md
---
title: Application Architecture
index: 2
---

# Application architecture

The following information depicts the components and dependencies that make up the application architecture of Boomerang Flow

![Boomerang Infrastructure Architecture](./assets/img/boomerang-flow-architecture-application.png)

## Components

| Component | Type | Technology | Internal to Internal | External Ingress | Internal Dependency | External Dependency |
| --------- | ------------ | ------------------ | ------------------ | ---------------- | ------------------- | ------------------- | 
| Flow      | Front End    | React + Node.js    | Flow MS            | true             |                     |                     | 
| Workflow      | Microservice | Spring Boot (Java<sup>®</sup>) | Controller MS      | true             | MongoDB             |                     | 
| Controller| Microservice | Spring Boot (Java) |                    | false            | Kubernetes<sup>®</sup>          |                     |
| Listener   | Microservice | Spring Boot (Java) | Workflow MS            | true             | NATS |
| Worker    | Job          | Node.js CLI        |                    | false            | Kubernetes          |                     |
| Lifecycle Worker | Orchestration          | Node.js CLI        |                    | false            | Kubernetes          |                     |

_Notes:_

1. The worker is dynamically spun up, based on the workflows being executed.
2. Kubernetes is required with access to ConfigMaps, PersistentVolumes, and Jobs.
3. The workers have implemented, and are bound to, specific RBAC privileges in Kubernetes.
4. If New Relic<sup>®</sup> APM is enabled it will run as a side car to the Spring Boot (Java) microservices 

## Dependencies

| Dependency | Implementation | Notes |
| --- | --- | --- |
| Kubernetes | <ul><lI>BM Cloud<sup>®</sup> Private (3.2.1+)</li><li>Red Hat<sup>®</sup> OpenShift<sup>®</sup> Container Platform (4.2+)</li><li>IBM Cloud Kubernetes Service</li><li>IBM Cloud Red Hat OpenShift Kubernetes Services</li><li>Microsoft Azure Kubernetes Service</li></ul> | Kubernetes 1.13.9+ | | 
| Application Load Balancer | NGINX (0.23.0+) | |
| Database | MongoDB | |
| Message Streaming | NATS Streaming | Required if eventing is enabled |
| Certificate Manager | Jetstack Cert Manager (0.7.0) | Optional if you have your own TLS certificate as a Kubernetes secret. |
| Core Services | IBM Services Essentials | 7.4.0+ | If enabled by disabling standalone mode |
| Logs | <ul><li>Elasticsearch<sup>®</sup> 5.5.1+</li><li>Kubernetes</li><li>Loki</li></ul> | If enabled |
| Monitoring | New Relic Infrastructure, New Relic Kubernetes, New Relic APM Agent | If enabled |
| Tracing | Jaeger | If enabled  |
